--- a/src/app/my-body/my-body.component.css
+++ b/src/app/my-body/my-body.component.css
@@ -8,3 +8,51 @@
     background-color: #999999;
     border-radius: 50px; 
 }
+input[type="submit"] :hover {
+    box-shadow: 0 0 0;
+}
+input[type="reset"] :hover {
+    box-shadow: 0 0 0;
+}
+table {
+    width: 100%;
+    height: 100%;
+}
+
+#row1, .row3 {
+    width: 20%;
+}
+
+.container {      
+    width: 100%;
+    height: 100%;    
+    background-color: white;
+    border: 2px solid white;
+    border-radius: 15px;
+}
+
+.container p {
+    font-size: 16pt;
+}
+
+input[type="submit"], input[type="reset"] {
+    color: white;
+    display: inline;
+    margin-right: 20px;
+    padding: 10px;
+    border-radius: 15px;    
+    border: 2px solid 	#CC3333;
+    background-color: #CC3333;
+    box-shadow: 4px 4px 0px 2px #FF0033;
+}
+
+input[type="text"], input[type="password"], input[type="email"] {
+    padding: 7px;
+    color: white;
+    border-radius: 15px;    
+    border: 3px solid 	#802121;
+    background-color: #CC3333;
+}
+::-webkit-input-placeholder {
+    color: rgb(182, 182, 182);
+}
