--- a/src/app/my-body/my-body.component.html
+++ b/src/app/my-body/my-body.component.html
@@ -1,8 +1,45 @@
 <div class="bod">
-  <form>
-    <input>
-    <input>
-    <input>
-    
-  </form>
+  <table >
+    <tr>
+      <td rowspan="3" id="row1">
+        <div class="container">
+          <h2>Регистрация</h2>
+          <form>
+            <p>Логин</p>
+            <input type="text" placeholder="Ваш логин" required>
+            <p>Пароль</p>
+            <input type="password" placeholder="Ваш пароль" required>
+            <p>Почта</p>
+            <input type="email" placeholder="Ваш email" required>
+            <p><input type="submit">   <input type="reset"></p>
+          </form>
+        </div>
+      </td>
+      <td rowspan="3" id="row2">
+        <div>
+          <h3>
+            Главная информация распологается здесь
+          </h3>
+        </div>
+      </td>      
+      <td class="row3">
+        
+        <div class="container">
+          <img width="200px" height="112px" src="assets/images/angular_6.jpg" alt="Новая версия Angular">
+          <p>Вышла новая верися Angular, теперь он имеет номер "6" и вместе с номером появились новые возможности!</p>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td><div class="container">        
+        <p>Пока пусто 404Error</p>
+      </div></td>
+    </tr>
+    <tr>
+      <td><div class="container">        
+        <p>Пока пусто 404Error</p>
+      </div></td>
+    </tr>
+  </table>
 </div>
+
