--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 html {
     height: 100%;
+    background-image: url(assets/images/fon.jpg);
 }
 
 body {  
