--- a/src/app/my-footer/my-footer.component.css
+++ b/src/app/my-footer/my-footer.component.css
@@ -1,11 +1,13 @@
-footer {        
+footer {       
+    width: 50%;
+    position: fixed;
+    top: 92%;
+    left: 25%;
     min-width: 500px;
-    position: relative;
-    margin-top: auto;
     text-align: center;
-    padding: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    padding: 10px;
+    border: 3px solid white;
+    border-bottom: none;
     background-color: #999999;
     border-top-right-radius: 50px; 
     border-top-left-radius: 50px; 
