--- a/src/app/my-header/my-header.component.html
+++ b/src/app/my-header/my-header.component.html
@@ -1,15 +1,10 @@
-<header>  
-  <table>
-    <tr>
-      <td id="im"><img class="image"  width="80px" height="90px" [src]="img" alt="Логотип Angular"></td>  
-      <td><h1> Hello, Angular</h1></td>
-    </tr>
-    <tr>      
-      <td class="td" colspan="2"><h2><ul>
-        <a href="index.html"><li>Главная</li></a>
-        <a href="#"><li>Списки</li></a>
-        <a href="#"><li>Справка</li></a>
-      </ul></h2></td>      
-    </tr>
-  </table> 
+<header>    
+  <img width="60px" height="60px" [src]="img" alt="Логотип Angular">  
+  <h1> Hello, Angular</h1>
+  <div>
+    <a class="but" href="index.html">Гавная</a>
+    <a class="but" href="#">Макеты</a>
+    <a class="but" href="#">Списки</a>
+  </div>
+  <p><button class="but">Войти</button> <a href="#"><img src="assets/images/login.png" width="40px" height="40px" alt="Иконка логина"></a> </p>
 </header>
