--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 html {
-    height: 100%;
     background-image: url(assets/images/fon.jpg);
 }
 
-body {  
-    height: 100%;
-    margin-left: 15%;
-    margin-right: 15%;
+body {
+    min-width: 1000px;
     font-family: 'Roboto', sans-serif;
 }
