--- a/src/app/my-header/my-header.component.html
+++ b/src/app/my-header/my-header.component.html
@@ -1,10 +1,6 @@
 <header>    
-  <img width="60px" height="60px" [src]="img" alt="Логотип Angular">  
-  <h1> Hello, Angular</h1>
-  <div>
-    <a class="but" href="index.html">Гавная</a>
-    <a class="but" href="#">Макеты</a>
-    <a class="but" href="#">Списки</a>
-  </div>
-  <p><button class="but">Войти</button> <a href="#"><img src="assets/images/login.png" width="40px" height="40px" alt="Иконка логина"></a> </p>
+  <img class="img-head1" [src]="img" alt="Логотип Angular">  
+  <h1> Hello, Angular</h1>  
+  <app-menu></app-menu>
+  <button class="but flex"><p>Войти</p><img class="img-head2" src="assets/images/login.png" alt="Иконка логина"></button>  
 </header>
