--- a/src/app/my-body/register/register.component.css
+++ b/src/app/my-body/register/register.component.css
@@ -1,7 +1,6 @@
 input[type="text"], input[type="password"], input[type="email"] {
     padding: 7px;
-    color: white;
     border-radius: 15px;    
-    border: 3px solid 	#802121;
-    background-color: #CC3333;
+    border: 3px solid 	#ED760E;
+    background-color: #FFB841;
 }
