--- a/src/app/my-header/my-header.component.css
+++ b/src/app/my-header/my-header.component.css
@@ -18,8 +18,23 @@ header {
     border-bottom-right-radius: 50px;
     border-bottom-left-radius: 50px;
 }
-
-
+dialog {
+    position: absolute;
+    top: 100px;
+    padding: 20px;
+    border: 0;
+    border-radius: 0.6rem;
+    box-shadow: 0 0 1em black;
+}
+dialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.4);
+}
+input[type="text"], input[type="password"]{
+    padding: 7px;
+    border-radius: 15px;    
+    border: 3px solid 	#ED760E;
+    background-color: #FFB841;
+}
 
 @media screen and (max-width: 800px) {
     p{
