--- a/src/app/my-body/register/register.component.css
+++ b/src/app/my-body/register/register.component.css
@@ -1,6 +1,6 @@
 input[type="text"], input[type="password"], input[type="email"] {
     padding: 7px;
     border-radius: 15px;    
-    border: 3px solid 	#ED760E;
-    background-color: #FFB841;
+    border: 2px solid 	#f37331;
+    background-color: #fcc372;
 }
