--- a/src/app/my-footer/my-footer.component.css
+++ b/src/app/my-footer/my-footer.component.css
@@ -2,9 +2,9 @@ footer {
     min-width: 500px;
     text-align: center;
     padding: 10px;
-    border: 3px solid white;
+    height: 48px;
     border-bottom: none;
-    background-color: #999999;
+    background: linear-gradient(to right, #f37331 , #FFB841, rgb(255, 242, 182));
     border-top-right-radius: 50px; 
     border-top-left-radius: 50px; 
 }
