--- a/src/app/my-body/card/card.component.html
+++ b/src/app/my-body/card/card.component.html
@@ -1,4 +1,4 @@
 <div class="container">
     <img width="200px" height="112px" src="assets/images/angular_6.jpg" alt="Новая версия Angular">
-    <p>Вышла новая верися Angular, теперь он имеет номер "6" и вместе с номером появились новые возможности!</p>
+    <p>АВТОВАЗ выпустил новую машину - Lada XRoy</p>
   </div>
