--- a/src/app/my-header/my-header-dialog/my-header-dialog.component.html
+++ b/src/app/my-header/my-header-dialog/my-header-dialog.component.html
@@ -4,5 +4,5 @@
     <input type="email" placeholder="Ваш email" required>
     <p>Пароль</p>
     <input type="password" placeholder="Ваш пароль" required>  
-    <p><input class="but" type="submit">   <input class="but" (click)="onNOClick()"></p>
+    <p><input class="but" type="submit">   <input class="but" value="Отмена" type="submit" (click)="onNOClick()"></p>
 </form>
