--- a/src/app/my-header/my-header.component.html
+++ b/src/app/my-header/my-header.component.html
@@ -1,4 +1,4 @@
 <header>    
   <img class="img-head1" [src]="img" alt="Логотип АВТОВАЗа">
-  <button (click)="openDialog()" class="but flex"><p>Войти</p><img class="img-head2" src="assets/images/login.png" alt="Иконка логина"></button>    
+  <button (click)="openDialog()" class="but flex">Войти<img class="img-head2" src="assets/images/login.png" alt="Иконка логина"></button>    
 </header>
