--- a/src/app/my-header/my-header-dialog/my-header-dialog.component.css
+++ b/src/app/my-header/my-header-dialog/my-header-dialog.component.css
@@ -1,8 +1,11 @@
-input[type="text"], input[type="password"], input[type="email"] {
+input[type="password"], input[type="email"] {
     padding: 7px;
     border-radius: 15px;    
     border: 2px solid 	#f37331;
     background-color: #fcc372;    
+}
+input[type="submit"]:disabled { 
+    background: #ccc; 
 }
 p {
     margin: 14px 0;
