--- a/src/app/my-header/my-header.component.css
+++ b/src/app/my-header/my-header.component.css
@@ -6,7 +6,7 @@ header {
     justify-content: space-around;
     top:0px;
     left:0px;
-    width:100vw;
+    width:100%;
     height: 5%;
 
     margin: 0;      
